force-app/main/default/objects/ssot__JobPositionRecruitmentRequisition__dlm/fields/ssot__rel_1721371621552_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1721371621552_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JobPositionRecruitmentRequisition_Re_rel</label>
    <referenceTo>ssot__RecruitmentRequisition__dlm</referenceTo>
    <relationshipLabel>JobPositionRecruitmentRequisition_Re_rel</relationshipLabel>
    <relationshipName>rel_1721371621552_end</relationshipName>
    <type>Lookup</type>
</CustomField>