force-app/main/default/objects/ssot__JobPositionRecruitmentRequisition__dlm/fields/ssot__rel_1721371846236_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1721371846236_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JobPositionRecruitmentRequisition_Jo_rel</label>
    <referenceTo>ssot__JobPosition__dlm</referenceTo>
    <relationshipLabel>JobPositionRecruitmentRequisition_Jo_rel</relationshipLabel>
    <relationshipName>rel_1721371846236_end</relationshipName>
    <type>Lookup</type>
</CustomField>